--- a/maze.html
+++ b/maze.html
@@ -7,7 +7,7 @@
     <button onclick="run()">Solve Me!</button>
     <button onclick="init()">Load map</button>
     </body>
-    <script src="maze2.js"></script>
+    <script src="maze.js"></script>
     <style>
         body{
             /* height: 100vh; */
